FAQ alignment fixed

--- a/src/screens/FAQ/styles.scss
+++ b/src/screens/FAQ/styles.scss
@@ -1,46 +1,3 @@
-body {
-  margin-top: 20px;
-  background: #f3f3f3;
-}
-
-.wrapper {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  align-content: center;
-  min-width: 100px;
-  border-bottom: 2px solid black;
-  margin-bottom: 20px;
-}
-
-.searchbar {
-  position: relative;
-  vertical-align: middle;
-}
-
-.search {
-  border: 1px solid grey;
-  border-radius: 5px;
-  height: 25px;
-  width: 100%;
-  padding: 2px 23px 2px 30px;
-  outline: 0;
-  background-color: #f5f5f5;
-}
-
-.search-icon {
-  position: absolute;
-  top: 6px;
-  left: 8px;
-  width: 14px;
-}
-
-.search:hover,
-.search:focus {
-  border: 1px solid #009688;
-  background-color: white;
-}
-
 .login {
   position: relative;
   border-radius: 1rem;
@@ -52,13 +9,11 @@ body {
 }
 
 .faqHeader {
-  align-items: center;
-  align-content: center;
+  text-align: center;
 }
 
 .supportTicket {
-  align-items: center;
-  align-content: center;
+  text-align: center;
 }
 
 .help {
@@ -69,4 +24,9 @@ body {
   border-radius: 5px;
   margin: 5px 0px;
   align-self: center;
+}
+
+.mainContent{
+  width: 60%;
+  margin: 0 auto;
 }
